dvpopov_updates branch changes: added db initialization

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,10 +1,11 @@
-##spring.datasource.url=jdbc:postgresql://localhost:6200/rmm-service-db
-##spring.datasource.username=root
-##spring.datasource.password=123
+spring.datasource.url=jdbc:postgresql://localhost:6200/rmm-service-db
+spring.datasource.username=root
+spring.datasource.password=123
 
-##spring.datasource.driver-class-name=org.postgresql.Driver
-##spring.jpa.database=postgresql
-##spring.jpa.database-platform=org.hibernate.dialect.PostgreSQL10Dialect
+spring.datasource.driver-class-name=org.postgresql.Driver
+spring.jpa.database=postgresql
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 
-##spring.sql.init.mode=always
-##spring.sql.init.schema-locations=classpath*:database/initDB.sql
+
+spring.sql.init.mode=never
+spring.sql.init.schema-locations=classpath*:database/initDB.sql
