dvpopov_updates branch changes:  and refactored checkUser service method, getUserById service method and searchUsers service method in DB usage

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,6 +6,6 @@ spring.datasource.driver-class-name=org.postgresql.Driver
 spring.jpa.database=postgresql
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 
-
-spring.sql.init.mode=never
-spring.sql.init.schema-locations=classpath*:database/initDB.sql
+spring.sql.init.mode=always
+#spring.sql.init.schema-locations=classpath*:database/initDB.sql
+spring.sql.init.data-locations=classpath*:database/populateDB.sql
