dvpopov_updates branch changes:  fixed populateDB.sql

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,5 @@
+server.port=${PORT:8080}
+
 spring.datasource.url=jdbc:postgresql://localhost:6200/rmm-service-db
 spring.datasource.username=root
 spring.datasource.password=123
@@ -8,5 +10,5 @@ spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 #spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgresDialect
 
 spring.sql.init.mode=always
-#spring.sql.init.schema-locations=classpath*:database/initDB.sql
+spring.sql.init.schema-locations=classpath*:database/initDB.sql
 spring.sql.init.data-locations=classpath*:database/populateDB.sql
