--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,10 @@
+server.port=${PORT:8080}
+
 spring.datasource.url=jdbc:postgresql://localhost:6200/rmm-service-db
 spring.datasource.username=root
 spring.datasource.password=123
+
+spring.application.name=ms-sky-high-rmm
 
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.jpa.database=postgresql
