dvpopov_updates branch changes:  deployment to amwera project refactoring first commit

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,6 @@
-server.port=${PORT:8080}
-
-spring.datasource.url=jdbc:postgresql://localhost:6200/rmm-service-db
-spring.datasource.username=root
-spring.datasource.password=123
+spring.datasource.url=jdbc:postgresql://amvera-fatpeppa-cnpg-sky-high-db-rw
+spring.datasource.username=${DB_USER}
+spring.datasource.password=${DB_PASSWORD}
 
 spring.application.name=ms-sky-high-rmm
 
