--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,5 @@
+server.port=80
+
 spring.datasource.url=jdbc:postgresql://amvera-fatpeppa-cnpg-sky-high-db-rw
 spring.datasource.username=${DB_USER}
 spring.datasource.password=${DB_PASSWORD}
