--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 server.port=80
 
-spring.datasource.url=jdbc:postgresql://amvera-fatpeppa-cnpg-sky-high-db-rw/skyhighdb
+spring.datasource.url=jdbc:postgresql://amvera-fatpeppa-cnpg-sky-high-db-rw:5432/skyhighdb
 spring.datasource.username=${DB_USER}
 spring.datasource.password=${DB_PASSWORD}
 
