dvpopov_updates branch changes:  local db test return

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,9 +3,12 @@ spring.application.name=ms-sky-high-rmm
 server.port=80
 
 spring.datasource.driver-class-name=org.postgresql.Driver
-spring.datasource.url=jdbc:postgresql://amvera-fatpeppa-cnpg-sky-high-db-rw:5432/skyhighdb
-spring.datasource.username=${DB_USER}
-spring.datasource.password=${DB_PASSWORD}
+#spring.datasource.url=jdbc:postgresql://amvera-fatpeppa-cnpg-sky-high-db-rw:5432/skyhighdb
+#spring.datasource.username=${DB_USER}
+#spring.datasource.password=${DB_PASSWORD}
+spring.datasource.url=jdbc:postgresql://localhost:6200/rmm-service-db
+spring.datasource.username=root
+spring.datasource.password=123
 
 spring.jpa.database=postgresql
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
