--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -14,6 +14,6 @@ spring.jpa.database=postgresql
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 #spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgresDialect
 
-spring.sql.init.mode=always
+spring.sql.init.mode=never
 spring.sql.init.schema-locations=classpath*:database/initDB.sql
 spring.sql.init.data-locations=classpath*:database/populateDB.sql
