dvpopov_updates branch changes: added eureka client connection and refactored WebSecurityConfig

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.application.name=ms-sky-high-rmm
 
-server.port=${port:80}
+server.port=${SERVER-PORT:80}
 
 spring.datasource.driver-class-name=org.postgresql.Driver
 #spring.datasource.url=jdbc:postgresql://amvera-fatpeppa-cnpg-sky-high-db-rw:5432/skyhighdb
@@ -13,6 +13,8 @@ spring.datasource.password=${RMM-DB-PASS:123}
 spring.jpa.database=postgresql
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 
-spring.sql.init.mode=never
+spring.sql.init.mode=${SQL-INIT-MODE:never}
 spring.sql.init.schema-locations=classpath*:database/initDB.sql
 spring.sql.init.data-locations=classpath*:database/populateDB.sql
+
+eureka.client.service-url.defaultZone=${EUREKA-CLIENT-DEFAULT-ZONE:http://localhost:8761/eureka/}
